--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html,
 body {
     width: 100%;
@@ -13,5 +17,14 @@ header {
 }
 
 .card {
-    height: 500px;
+    height: 600px;
+}
+
+.card-img-top {
+    height: 200px;
+    object-fit: contain;
+}
+
+input::placeholder {
+    text-align: end;
 }
