--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Anjoman;
+    src: url("./fonts/Anjoman-FaNum-Regular.6e2450f.woff2");
+}
+
 * {
     box-sizing: border-box;
 }
@@ -10,6 +15,10 @@ body {
 
 body {
     background-color: #F8F9FB;
+}
+
+.font-Anjoman {
+    font-family: Anjoman !important;
 }
 
 header {
